Started error checking for isWithinRadius